# grpc

long-comp/: CMakeLists.txt  main.cpp
long-comp/protos/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h  test.proto
